@@ -113,13 +113,22 @@ static CMPIStatus deliverIndication(const CMPIBroker* mb, const CMPIContext* ctx
    CMPIStatus st = { CMPI_RC_OK, NULL };
    CMPIArgs *in=NULL;
    CMPIObjectPath *op=NULL;
-   
+   CMPIObjectPath *indop = CMGetObjectPath(ind, &st);
+   int x, classMatch = 0;   
+
    _SFCB_ENTER(TRACE_INDPROVIDER | TRACE_UPCALLS, "deliverIndication");
 
    NativeSelectExp *se=activFilters;
    
    while (se) {
-     if (se->exp.ft->evaluate(&se->exp,ind,&st)) {
+     /* Check for matching FROM class */
+     for (x=0; x<se->qs->fcNext; x++) {
+       if (CMClassPathIsA(mb, indop, se->qs->fClasses[x], &st)) {
+	 classMatch = 1;
+	 break;
+       }
+     }
+     if (classMatch && se->exp.ft->evaluate(&se->exp,ind,&st)) {
      /*apply a propertyfilter in case the query is not "SELECT * FROM ..." */
         if(se->qs->spNames && se->qs->spNames[0]) {
            ind->ft->setPropertyFilter((CMPIInstance*)ind, (const char**)se->qs->spNames, NULL);
