@@ -6,6 +6,7 @@ Bugs fixed:
 - 3130727 CMPIPropertyMIFT.setProperty() missing objectpath keys
 - 3054618 mofpp is overaggressive when detecting comments
 - 3162016 sfcbd Segmentation fault in cleanupCimXmlRequest
+- 3172080 deliverIndication does not check for matching FROM classes
 
 Changes in 1.3.10
 =================
